fix: change text color for contrast accessibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,7 +229,7 @@ padding-top: 5em;
 }
 
 .content-box p span {
-  color: #ff8649;
+  color: rgb(0, 0, 0);
   text-transform: uppercase;
   letter-spacing: 2px;
 }
